refactor: update notebook output paths and cleanup legacy files
- refactor notebooks/flare_create_graphs.ipynb to save figures to outputs/figures/
- remove legacy notebooks and archived files as part of cleanup

--- a/notebooks/flare_create_graphs.ipynb
+++ b/notebooks/flare_create_graphs.ipynb
@@ -10,7 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Project: /Users/daisukeyamashiki/Code/Research/kyoto-flare-detection\n"
+      "Project: /Users/daisukeyamashiki/Code/Research/kyoto-flare-detection\n",
+      "Output directory set to: /Users/daisukeyamashiki/Code/Research/kyoto-flare-detection/outputs/figures\n"
      ]
     }
    ],
@@ -34,7 +35,12 @@
     "if str(PROJECT_ROOT) not in sys.path:\n",
     "    sys.path.insert(0, str(PROJECT_ROOT))\n",
     "\n",
-    "print('Project:', PROJECT_ROOT)\n"
+    "print('Project:', PROJECT_ROOT)\n",
+    "\n",
+    "# Define output directory for figures\n",
+    "output_dir = PROJECT_ROOT / \"outputs\" / \"figures\"\n",
+    "output_dir.mkdir(parents=True, exist_ok=True)\n",
+    "print(f\"Output directory set to: {output_dir}\")\n"
    ]
   },
   {
@@ -74,7 +80,7 @@
     "plt.rcParams['ps.fonttype'] = 42\n",
     "plt.rcParams['font.size'] = 16\n",
     "\n",
-    "print(\"Publication style settings applied.\")"
+    "print(\"Publication style settings applied.\")\n"
    ]
   },
   {
@@ -402,7 +408,7 @@
     "        print(\"Could not find any stars or detectors to debug.\")\n",
     "    except Exception as e:\n",
     "        print(f\"An error occurred during debugging: {e}\")\n",
-    "print(\"--- END DEBUG INFO ---\\n\")"
+    "print(\"--- END DEBUG INFO ---\\n\")\n"
    ]
   },
   {
@@ -499,7 +505,7 @@
     "        ax.xaxis.set_minor_locator(mticker.LogLocator(base=10, subs=np.arange(2, 10)*0.1))\n",
     "        ax.yaxis.set_minor_locator(mticker.LogLocator(base=10, subs=np.arange(2, 10)*0.1))\n",
     "        ax.legend(loc='lower right', fontsize=15, frameon=False)\n",
-    "        plt.savefig('analysis_result_freq_plot_integrated.pdf', bbox_inches='tight')\n",
+    "        plt.savefig(output_dir / 'analysis_result_freq_plot_integrated.pdf', bbox_inches='tight')\n",
     "        plt.show()\n"
    ]
   },
@@ -571,7 +577,7 @@
     "        ax.xaxis.set_major_formatter(mticker.FuncFormatter(lambda x, pos: f\"{x:g}\"))\n",
     "        ax.yaxis.set_major_formatter(mticker.FuncFormatter(lambda y, pos: f\"{y:g}\"))\n",
     "        ax.legend(loc='lower right', fontsize=15, frameon=False)\n",
-    "        plt.savefig('analysis_result_totalene_plot_integrated.pdf', bbox_inches='tight')\n",
+    "        plt.savefig(output_dir / 'analysis_result_totalene_plot_integrated.pdf', bbox_inches='tight')\n",
     "        plt.show()\n"
    ]
   },
@@ -628,13 +634,13 @@
     "        ax.xaxis.set_major_formatter(mticker.FuncFormatter(lambda x, pos: f\"{x:g}\"))\n",
     "        ax.yaxis.set_major_formatter(mticker.FuncFormatter(lambda y, pos: f\"{y:g}\"))\n",
     "        ax.legend(loc='lower right', fontsize=15, frameon=False)\n",
-    "        plt.savefig('analysis_result_maxene_plot_integrated.pdf', bbox_inches='tight')\n",
+    "        plt.savefig(output_dir / 'analysis_result_maxene_plot_integrated.pdf', bbox_inches='tight')\n",
     "        plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "max_energy_pearson",
    "metadata": {},
    "outputs": [
@@ -698,13 +704,13 @@
     "        ax.xaxis.set_major_formatter(mticker.FuncFormatter(lambda x, pos: f\"{x:g}\"))\n",
     "        ax.yaxis.set_major_formatter(mticker.FuncFormatter(lambda y, pos: f\"{y:g}\"))\n",
     "        ax.legend(loc='lower right', fontsize=12, frameon=False)\n",
-    "        plt.savefig('analysis_result_maxene_plot_pearsonr.pdf', bbox_inches='tight')\n",
+    "        plt.savefig(output_dir / 'analysis_result_maxene_plot_pearsonr.pdf', bbox_inches='tight')\n",
     "        plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cumulative_energy_ek_dra",
    "metadata": {},
    "outputs": [
@@ -765,13 +771,13 @@
     "    leg = ax.legend(loc='lower left', fontsize=10, frameon=True)\n",
     "    leg.get_frame().set_alpha(0)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig('flare_cumenergy_EKDra.pdf', format='pdf', bbox_inches='tight')\n",
+    "    plt.savefig(output_dir / 'flare_cumenergy_EKDra.pdf', format='pdf', bbox_inches='tight')\n",
     "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cumulative_energy_ds_tuc_a",
    "metadata": {},
    "outputs": [
@@ -832,13 +838,13 @@
     "    leg = ax.legend(loc='lower left', fontsize=10, frameon=True)\n",
     "    leg.get_frame().set_alpha(0)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig('flare_cumenergy_DSTuc.pdf', format='pdf', bbox_inches='tight')\n",
+    "    plt.savefig(output_dir / 'flare_cumenergy_DSTuc.pdf', format='pdf', bbox_inches='tight')\n",
     "    plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cumulative_energy_v889_her",
    "metadata": {},
    "outputs": [
@@ -899,7 +905,7 @@
     "    leg = ax.legend(loc='lower left', fontsize=10, frameon=True)\n",
     "    leg.get_frame().set_alpha(0)\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig('flare_cumenergy_V889Her.pdf', format='pdf', bbox_inches='tight')\n",
+    "    plt.savefig(output_dir / 'flare_cumenergy_V889Her.pdf', format='pdf', bbox_inches='tight')\n",
     "    plt.show()\n"
    ]
   }
