docs/refactor: update notebook and thesis text
- Update flare_create_graphs notebook with synchronized detection logic and paths.
- Minor refinement of text in the flare detection section of the thesis.

--- a/docs/thesis/flare_detection.tex
+++ b/docs/thesis/flare_detection.tex
@@ -174,7 +174,7 @@ In particular, the TESS mission duration now exceeds Kepler’s four-year missio
 In this study, we investigate the time-resolved relationship between starspot area and flare frequency on young solar-type stars.
 We utilized the long-term optical photometric data from TESS to analyze three representative young solar-type stars: EK Draconis, DS Tucanae A, and V889 Herculis.
 Young solar-type stars are of particular interest as they serve as proxies for the ``young Sun,'' offering insights into the magnetic environment of the early solar system.
-Also, young solar-type stars are know to be very flare active, so they are suitable
+Also, young solar-type stars are known to be very flare active, so they are suitable
 These three stars are known as bright young solar-type stars and stellar parameters are well known as in Table \ref{tab:targets}, their flare properties and starspot properties are well characterized so far \citep{2005LRSP....2....8B,2005A&A...435..215K,2007LRSP....4....3G,2017MNRAS.465.2076W,2018A&A...620A.162J,2022A&A...661A.148C,2022NatAs...6..241N,2022ApJ...926L...5N,2025ApJ...993...80N,2025arXiv251203830G}.
 In this study, by deriving the starspot area and flare occurance rate for each observational sector, we specifically examine whether the correlation observed in statistical ensemble studies holds for the ``time variation" of individual objects.
 Furthermore, for EK Dra, which has the most extensive dataset, we also investigate the dependence of starspot area on the rotation period to explore potential signatures of solar-like differential rotation.
